# LoloFX

./: # Code Citations.md  DESIGN.md  README.md  StatusReport.md
LoloFX/: CMakeLists.txt  JucePluginDefines.h
LoloFX/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Proposal/: README.md
